// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input default snapshot 1`] = `
<DocumentFragment>
  <div
    class="ventura alert alertError"
  >
    <div
      class="contentContainer"
    >
      <svg
        class="icon iconError"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
        />
        <line
          x1="15"
          x2="9"
          y1="9"
          y2="15"
        />
        <line
          x1="9"
          x2="15"
          y1="9"
          y2="15"
        />
      </svg>
      <span
        class="message"
      >
        Something went wrong.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input error snapshot 1`] = `
<DocumentFragment>
  <div
    class="ventura alert alertError"
  >
    <div
      class="contentContainer"
    >
      <svg
        class="icon iconError"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="7.86 2 16.14 2 22 7.86 22 16.14 16.14 22 7.86 22 2 16.14 2 7.86 7.86 2"
        />
        <line
          x1="15"
          x2="9"
          y1="9"
          y2="15"
        />
        <line
          x1="9"
          x2="15"
          y1="9"
          y2="15"
        />
      </svg>
      <span
        class="message"
      >
        Something went wrong.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input success snapshot 1`] = `
<DocumentFragment>
  <div
    class="ventura alert alertSuccess"
  >
    <div
      class="contentContainer"
    >
      <svg
        class="icon iconSuccess"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
        />
        <polyline
          points="22 4 12 14.01 9 11.01"
        />
      </svg>
      <span
        class="message"
      >
        Something went wrong.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input warning snapshot 1`] = `
<DocumentFragment>
  <div
    class="ventura alert alertWarning"
  >
    <div
      class="contentContainer"
    >
      <svg
        class="icon iconWarning"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
        />
        <line
          x1="12"
          x2="12"
          y1="9"
          y2="13"
        />
        <line
          x1="12"
          x2="12.01"
          y1="17"
          y2="17"
        />
      </svg>
      <span
        class="message"
      >
        Something went wrong.
      </span>
    </div>
  </div>
</DocumentFragment>
`;
